--- a/static/css/sign_up.css
+++ b/static/css/sign_up.css
@@ -1,105 +1,145 @@
-*{
-    margin:0;
-    padding:0;
-    text-decoration: none;
-    box-sizing: border-box;
+body, html{
+    height: 100%;
+    margin: 0;
+    /* overflow: auto; */
 }
 
 body{
-    background-image: url("../images/Home Page Background.jpg");
+    background-image: url("../images/Reservation Background.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: 100% 100%;
     background-attachment: fixed;
-    overflow: hidden; 
+
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    /* overflow: hidden;      */
 }
 
-.container{
-    width: 320px;
-    margin: 12vh 10vw;
-    background-color: whitesmoke;
-    padding: 40px;
+section{
+    margin: auto;
+}
+
+.container{   
+    width: 22vw;
+    background-color: rgba(255,255,255,0.7);
+    padding: 2.5vw;
 }
 
 .header{
-    margin: 0px auto 30px auto;
+    margin: 0 auto 1.5vh auto;
     text-align: center;
 }
 
 .header > label{
-    font-size: 30px;
+    font-size: 3vw;
     font-weight: bolder;
     font-style: italic;
+
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(121,73,9,1) 100%, rgba(0,212,255,1) 100%);
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
-    
-}
-.header > p{
-    margin-top: 15px;
-    font-style: italic;
-}
-.body{
-    text-align: center;
-}
-input.span1{
-    margin: 0px auto 30px auto;
-    width: 100%;
-    padding: 10px;
 }
 
-p.span1{
+.header > p{
+    font-style: italic;
+    font-size: 1.1vw;
+}
+
+
+form input{
+    margin: 1.5vh auto 1.5vh auto;
+    width: 100%;
+    padding: .5vw 0px;
+    border-color: white;
+    font-size: 1.1vw;
+}
+
+a:visited {
+    color:blue;
+}
+a{
+    text-decoration: none;
+}
+p.error-message{
+    font-size: 1.1vw;
+
     margin: 0px auto;
     width: 100%;
     padding: 5px;
+
     color: red;
 }
 
-input.span2{
-    margin: 0px auto;
-    width: 100%;
-    padding: 10px;
-}
-
-form > a{
-    float: left;
-    margin: 10px auto 20px auto;
-}
 button{
-    margin: 0px auto 30px auto;
+    margin: 2vh auto 2vh auto;
+    border-radius: 7px;
     width: 100%;
     padding: 10px;
-    font-size: 18px;
+
+    font-size: 2vw;
+    text-align: center;
+    font-weight: 1vw;
+
     color: white;
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(121,73,9,1) 100%, rgba(0,212,255,1) 100%);
 }
 
-.sign-up{
+
+.sign-up,.guest-user{
     text-align: center;
-    margin: 0px auto 10px auto;
+    margin: 2vh auto 2vh auto;
+    font-size: 1.2vw;
 }
 
-.guest-user{
-    text-align: center;
-}
 
-
-@media screen and (max-width: 900px), screen and (max-height: 850px) {
+@media only screen and (max-width: 1024px), screen and (max-height: 500px) {
     body{
-        background-position: center top;
-        background-size: 100% 30%;
-        background-attachment: scroll;
         overflow: auto;
-
+        grid-template-columns: repeat(1,1fr);
     }
-    .container{
-        margin: 480px auto 160px auto;
-        position: relative;
-    }
-}
 
-@media screen and (max-width: 320px) {
+    .header > label{
+        font-size: 2rem;    
+    }
+    .header > p{
+        font-size: 1rem;
+    }
+
+    .container{   
+        width: 320px;
+        background-color: rgba(255,255,255,0.7);
+        margin: 100px auto;
+    }
+    
+    p.error-message{
+        font-size: 1rem;
+    }
+    
+    form input{
+        margin: 0px auto 30px auto;
+        font-size: 1rem;
+    }
+    
+    button{
+        margin: 0px auto 30px auto;
+        padding: 10px;
+        font-size: 18px;  
+    }
+    
+    .sign-up{
+        margin: 0px auto 10px auto;
+        font-size: 1rem;
+    }
+
+    .guest-user{
+        font-size: 1rem;
+    }
+  }
+
+  @media screen and (max-width: 320px) {
+   
     .container{
         width: 100%;
     }
